--- a/src/app/components/video-list/video-list.component.html
+++ b/src/app/components/video-list/video-list.component.html
@@ -3,6 +3,16 @@
 
   <p>video-list works!</p>
   {{ searchString }}
+
+  Our Data:
+  {{data.hello}}
+  {{data.hello}}
+  {{data.hello}}
+  {{data.hello}}
+  {{data.hello}}
+  {{data.hello}}
+
+
 </div>
 
 
